--- a/stories/de/0066_nozibele-und-die-drei-haare.html
+++ b/stories/de/0066_nozibele-und-die-drei-haare.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nozibele og de tre hårstråene</title>
+    <title>Nozibele und die drei Haare</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,103 +43,109 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 
-<h1 id="nozibele-og-de-tre-hrstrene">Nozibele og de tre hårstråene</h1>
+<h1 id="nozibele-und-die-drei-haare">Nozibele und die drei Haare</h1>
 
-Tessa Welch<br>norsk</div><div class="pagebreak">
+Tessa Welch<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
 
-<p>For lenge, lenge siden gikk tre jenter ut for å samle ved.</p>
+<p>Vor langer Zeit gingen drei Mädchen los, um Holz zu sammeln.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
 
-<p>Det var en varm dag så de gikk ned til elven for å svømme. De lekte og plasket og svømte i vannet.</p>
+<p>Es war ein heißer Tag, also gingen sie zum Fluss, um zu schwimmen. Sie spielten und planschten und schwammen im Wasser.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
 
-<p>Plutselig merket de at det var blitt sent. De skyndte seg tilbake til landsbyen.</p>
+<p>Plötzlich merkten sie, dass es schon spät war. Sie liefen schnell ins Dorf zurück.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
 
-<p>Da de var nesten hjemme la Nozibele hånden på halsen. Hun hadde glemt halsbåndet! “Vær så snill og dra tilbake sammen med meg!” tryglet hun vennene sine. Men vennene hennes sa at det var for sent.</p>
+<p>Als sie fast zu Hause waren, fasste sich Nozibele an den Hals. Sie hatte ihre Kette vergessen! “Bitte geht mit mir zurück!”, flehte sie ihre Freundinnen. Aber ihre Freundinnen sagten, es sei zu spät.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
 
-<p>Så Nozibele gikk tilbake til elven alene. Hun fant halsbåndet og skynde seg hjem. Men hun gikk seg vill i mørket.</p>
+<p>Also ging Nozibele allein an den Fluss zurück. Sie fand ihre Kette und lief schnell nach Hause. Aber sie verlief sich im Dunkeln.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
 
-<p>I det fjerne så hun lys som kom fra en hytte. Hun løp mot hytta og banket på døra.</p>
+<p>In der Ferne erblickte sie Licht in einer Hütte. Sie lief schnell hinüber und klopfte an die Tür.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
 
-<p>Så forundret hun ble da det var en hund som åpnet døra og sa: “Hva er det du vil?” “Jeg har gått meg vill og trenger et sted å sove”, sa Nozibele. “Kom inn, ellers biter jeg deg!” sa hunden. Så Nozibele gikk inn.</p>
+<p>Zu ihrer Überraschung öffnete ein Hund die Tür und sagte: “Was willst du?”
+“Ich habe mich verlaufen und brauche einen Schlafplatz.”, antwortete Nozibele.
+“Komm herein oder ich beiße dich!”, sagte der Hund. Also trat Nozibele ein.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
 
-<p>Da sa hunden: “Lag mat for meg!” “Men jeg har aldri laget mat for en hund før”, svarte hun. “Lag mat, ellers biter jeg deg!” sa hunden. Så Nozibele laget litt mat til hunden.</p>
+<p>Dann sagte der Hund: “Koch für mich!”
+“Aber ich habe noch nie für einen Hund gekocht.”, antwortete Nozibele.
+“Koch oder ich beiße dich!”, sagte der Hund. Also kochte Nozibele dem Hund etwas.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
 
-<p>Da sa hunden: “Re opp sengen for meg!” Nozibele svarte: “Jeg har aldri redd opp sengen for en hund.” “Re opp sengen, ellers biter jeg deg!” sa hunden. Så Nozibele redde opp sengen.</p>
+<p>Dann sagte der Hund: “Mach mein Bett für mich!”
+Nozibele antwortete: “Ich habe noch nie einem Hund das Bett gemacht.”
+“Mach das Bett oder ich beiße dich!”, sagte der Hund. Also machte Nozibele das Bett.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
 
-<p>Hver dag måtte hun lage mat og feie og gjøre rent for hunden. Så en dag sa hunden: “Nozibele, i dag må jeg besøke noen venner. Fei huset, lag mat og gjør rent tingene mine før jeg kommer tilbake.”</p>
+<p>Jeden Tag musste sie für den Hund kochen und kehren und waschen. Dann sagte der Hund eines Tages: “Nozibele, heute kommen einige Freunde zu Besuch. Kehre das Haus, koch das Essen und wasch meine Sachen, bevor ich zurückkomme.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
 
-<p>Så snart hunden var dratt tok Nozibele tre hårstrå fra hodet sitt. Hun la ett hårstrå under sengen, ett bak døra, og ett i innhegningen. Så løp hun hjem så fort hun orket.</p>
+<p>Sobald der Hund gegangen war, nahm Nozibele drei Haare von ihrem Kopf. Sie legte ein Haar unters Bett, eins hinter die Tür und eins in den Kral. Dann lief sie so schnell sie konnte nach Hause.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
 
-<p>Da hunden kom tilbake, lette han etter Nozibele. “Nozibele, hvor er du?” ropte han. “Jeg er her, under sengen”, sa det første hårstrået. “Jeg er her, bak døra”, sa det andre hårstrået. “Jeg er her, i innhegningen”, sa det tredje hårstrået.</p>
+<p>Als der Hund zurückkam, suchte er nach Nozibele. “Nozibele, wo bist du?”, rief er. “Ich bin hier, unter dem Bett.”, sagte das erste Haar. “Ich bin hier, hinter der Tür.”, sagte das zweite Haar. “Ich bin hier, im Kral.”, sagte das dritte Haar.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
 
-<p>Da skjønte hunden at Nozibele hadde lurt ham. Så han løp og løp hele veien til landsbyen. Men der ventet brødrene til Nozibele med store kjepper. Hunden snudde seg og løp bort, og han har ikke blitt sett siden.</p>
+<p>Da wusste der Hund, dass Nozibele ihn reingelegt hatte und so rannte und rannte den ganzen Weg bis ins Dorf. Aber Nozibeles Brüder warteten dort mit großen Stöcken. Der Hund machte kehrt und lief davon und wurde seitdem nie mehr gesehen.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Tessa Welch<br /><strong>Illustrasjoner:</strong> Wiehan de Jager<br /><strong>Oversettelse:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> norsk</p>
-<p>Denne fortellingen kommer fra <a href="https://global-asp.github.io/">Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href="http://africanstorybook.org/">African Storybook Project</a> til alle verdens språk.<p>Du kan se den originale fortellingen på ASP-websida <a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">her</a>
+<p><strong>Text:</strong> Tessa Welch<br /><strong>Veranschaulichung:</strong> Wiehan de Jager<br /><strong>Übersetzung:</strong> Anna Westpfahl<br /><strong>Sprache:</strong> Deutsch</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
