--- a/stories/de/0066_nozibele-und-die-drei-haare_slides.html
+++ b/stories/de/0066_nozibele-und-die-drei-haare_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Fotballhelten Andiswa  - Global African Storybook</title>
+  <title>Nozibele und die drei Haare - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="fotballhelten-andiswa" class="slide level1">
-<h1>Fotballhelten Andiswa</h1>
+<section id="nozibele-und-die-drei-haare" class="slide level1">
+<h1>Nozibele und die drei Haare</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p>Andiswa så på guttene spille fotball. Hun ville så gjerne være med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>Vor langer Zeit gingen drei Mädchen los, um Holz zu sammeln.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
-<p>Treneren satte hendene i siden. &quot;På skolen her får bare gutter spille fotball&quot;, sa han.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>Es war ein heißer Tag, also gingen sie zum Fluss, um zu schwimmen. Sie spielten und planschten und schwammen im Wasser.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>Guttene sa at hun skulle gå og spille nettball. De sa at nettball er for jenter og fotball er for gutter. Andiswa ble sinna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>Plötzlich merkten sie, dass es schon spät war. Sie liefen schnell ins Dorf zurück.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>Dagen etter var det en stor fotballkamp på skolen. Treneren var bekymret fordi den beste spilleren på laget var syk og kunne ikke spille.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>Als sie fast zu Hause waren, fasste sich Nozibele an den Hals. Sie hatte ihre Kette vergessen! &quot;Bitte geht mit mir zurück!&quot;, flehte sie ihre Freundinnen. Aber ihre Freundinnen sagten, es sei zu spät.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
-<p>Andiswa løp bort til treneren og tryglet om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha Andiswa med på laget.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>Also ging Nozibele allein an den Fluss zurück. Sie fand ihre Kette und lief schnell nach Hause. Aber sie verlief sich im Dunkeln.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p>Det ble en hard kamp. Ingen hadde skåret mål etter første omgang.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>In der Ferne erblickte sie Licht in einer Hütte. Sie lief schnell hinüber und klopfte an die Tür.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p>I andre omgang sentret en gutt ballen til Andiswa. Hun løp mot målet, klinte til ballen og skåret.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>Zu ihrer Überraschung öffnete ein Hund die Tür und sagte: &quot;Was willst du?&quot; &quot;Ich habe mich verlaufen und brauche einen Schlafplatz.&quot;, antwortete Nozibele. &quot;Komm herein oder ich beiße dich!&quot;, sagte der Hund. Also trat Nozibele ein.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
-<p>Publikum var fra seg av glede. Siden den dagen fikk jenter også spille fotball på skolen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>Dann sagte der Hund: &quot;Koch für mich!&quot; &quot;Aber ich habe noch nie für einen Hund gekocht.&quot;, antwortete Nozibele. &quot;Koch oder ich beiße dich!&quot;, sagte der Hund. Also kochte Nozibele dem Hund etwas.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,63 @@
 </section>
 <section class="slide level1">
 
-<h2 id="fotballhelten-andiswa-1">Fotballhelten Andiswa</h2>
-<strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>Dann sagte der Hund: &quot;Mach mein Bett für mich!&quot; Nozibele antwortete: &quot;Ich habe noch nie einem Hund das Bett gemacht.&quot; &quot;Mach das Bett oder ich beiße dich!&quot;, sagte der Hund. Also machte Nozibele das Bett.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>Jeden Tag musste sie für den Hund kochen und kehren und waschen. Dann sagte der Hund eines Tages: &quot;Nozibele, heute kommen einige Freunde zu Besuch. Kehre das Haus, koch das Essen und wasch meine Sachen, bevor ich zurückkomme.&quot;</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>Sobald der Hund gegangen war, nahm Nozibele drei Haare von ihrem Kopf. Sie legte ein Haar unters Bett, eins hinter die Tür und eins in den Kral. Dann lief sie so schnell sie konnte nach Hause.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>Als der Hund zurückkam, suchte er nach Nozibele. &quot;Nozibele, wo bist du?&quot;, rief er. &quot;Ich bin hier, unter dem Bett.&quot;, sagte das erste Haar. &quot;Ich bin hier, hinter der Tür.&quot;, sagte das zweite Haar. &quot;Ich bin hier, im Kral.&quot;, sagte das dritte Haar.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>Da wusste der Hund, dass Nozibele ihn reingelegt hatte und so rannte und rannte den ganzen Weg bis ins Dorf. Aber Nozibeles Brüder warteten dort mit großen Stöcken. Der Hund machte kehrt und lief davon und wurde seitdem nie mehr gesehen.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="nozibele-und-die-drei-haare-1">Nozibele und die drei Haare</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Veranschaulichung:</strong> Wiehan de Jager<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/andiswa-soccer-star'>her</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
