--- a/stories/de/0234_andiswa-fußballstar_slides.html
+++ b/stories/de/0234_andiswa-fußballstar_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Fotballhelten Andiswa  - Global African Storybook</title>
+  <title>Andiswa Fußballstar - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="fotballhelten-andiswa" class="slide level1">
-<h1>Fotballhelten Andiswa</h1>
+<section id="andiswa-fußballstar" class="slide level1">
+<h1>Andiswa Fußballstar</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p>Andiswa så på guttene spille fotball. Hun ville så gjerne være med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
+<p>Andiswa schaute den Jungen beim Fußballspielen zu. Sie wünschte, sie könnte auch in der Mannschaft sein. Sie fragt den Trainer, ob sie mit ihnen trainieren kann.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
-<p>Treneren satte hendene i siden. &quot;På skolen her får bare gutter spille fotball&quot;, sa han.</p>
+<p>Der Trainer stützt die Hände in die Hüften. &quot;An dieser Schule dürfen nur Jungen Fußball spielen.&quot;, sagt er.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>Guttene sa at hun skulle gå og spille nettball. De sa at nettball er for jenter og fotball er for gutter. Andiswa ble sinna.</p>
+<p>Die Jungen sagten, sie solle Netzball spielen. Sie sagten, Netzball sei für Mädchen und Fußball für Jungs.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>Dagen etter var det en stor fotballkamp på skolen. Treneren var bekymret fordi den beste spilleren på laget var syk og kunne ikke spille.</p>
+<p>Am nächsten Tag gab es ein großes Fußballspiel. Der Trainer machte sich Sorgen, weil sein bester Spieler krank war und nicht spielen konnte.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
-<p>Andiswa løp bort til treneren og tryglet om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha Andiswa med på laget.</p>
+<p>Andiswa lief zum Trainer und flehte ihn an, sie spielen zu lassen. Der Trainer wusste nicht, was er tun sollte. Dann beschloss er, Andiswa in die Mannschaft auszunehmen.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p>Det ble en hard kamp. Ingen hadde skåret mål etter første omgang.</p>
+<p>Das Spiel war hart. Zur Halbzeit hatte noch niemand ein Tor geschossen.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p>I andre omgang sentret en gutt ballen til Andiswa. Hun løp mot målet, klinte til ballen og skåret.</p>
+<p>Während der zweiten Halbzeit spielte einer der Jungen Andiswa den Ball zu. Sie bewegte sich sehr schnell auf das Tor zu. Sie schoss den Ball mit großer Wucht und erzielte ein Tor.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
-<p>Publikum var fra seg av glede. Siden den dagen fikk jenter også spille fotball på skolen.</p>
+<p>Die Zuschauer jubelten begeistert. Seit diesem Tag dürfen Mädchen an der Schule auch Fußball spielen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="fotballhelten-andiswa-1">Fotballhelten Andiswa</h2>
-<strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="andiswa-fußballstar-1">Andiswa Fußballstar</h2>
+<strong>Text:</strong> Eden Daniels<br> <strong>Veranschaulichung:</strong> Eden Daniels<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/andiswa-soccer-star'>her</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/andiswa-soccer-star'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
