--- a/stories/index.html
+++ b/stories/index.html
@@ -1575,6 +1575,12 @@
       <td><a name="de0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/de/0066_nozibele-und-die-drei-haare_slides.html" target="_blank">Nozibele und die drei Haare</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/de/0067_kochen_slides.html" target="_blank">Kochen</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1677,6 +1683,12 @@
       <td><a name="de0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="/stories/de/0234_andiswa-fußballstar_slides.html" target="_blank">Andiswa Fußballstar</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/de/0253_mein-bilderbuch_slides.html" target="_blank">Mein Bilderbuch</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1687,6 +1699,12 @@
       <td><a href="/stories/de/0271_zwei_slides.html" target="_blank">Zwei</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="de0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/de/0296_tom-der-bananenverkäufer_slides.html" target="_blank">Tom der Bananenverkäufer</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -5833,7 +5851,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nn0066">nn</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nn0066">nn</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -6139,7 +6157,7 @@
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#nn0234">nn</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#de0234">de</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#nn0234">nn</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
@@ -6217,7 +6235,7 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nn0296">nn</a>, <a href="#no0296">no</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nn0296">nn</a>, <a href="#no0296">no</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
