--- a/stories/no/0001_en-veldig-høy-mann.html
+++ b/stories/no/0001_en-veldig-høy-mann.html
@@ -63,7 +63,7 @@ Cornelius Gulere<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p>Senga hans var for kort.</p>
+<p>Sengen hans var for kort.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
