--- a/stories/no/0006_anansi-og-visdommen_slides.html
+++ b/stories/no/0006_anansi-og-visdommen_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: &quot;Det var jo jeg som skulle ha all denne visdommen, men nå var sønnen min lurere enn meg!&quot; Anansi ble så sinna at han kastet krukka ned fra treet.</p>
+<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: &quot;Det var jo jeg som skulle ha all denne visdommen, men nå var sønnen min lurere enn meg!&quot; Anansi ble så sint at han kastet krukka ned fra treet.</p>
 <center>
 <strong>5</strong>
 </center>
