--- a/stories/no/0052_simbegwire.html
+++ b/stories/no/0052_simbegwire.html
@@ -49,14 +49,14 @@ Rukia Nantale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
 
-<p>Da Simbegwires mor døde ble hun veldig lei seg. Simbegwires far gjorde sitt beste for å ta hånd om datteren sin. Litt etter litt lærte de å bli lykkelige igjen, uten Simbegwires mor. Hver morgen satt de og snakket om dagen som lå foran dem. Hver kveld lagde de middag sammen. Etter at de hadde tatt oppvasken hjalp Simbegwires far henne med leksene.</p>
+<p>Da Simbegwires mor døde ble hun veldig lei seg. Simbegwires far gjorde sitt beste for å ta hånd om datteren sin. Litt etter litt lærte de å bli lykkelige igjen, uten Simbegwires mor. Hver morgen satt de og snakket om dagen som lå foran dem. Hver kveld lagde de middag sammen. Etter at de hadde tatt oppvasken hjalp Simbegwires far henne med leksene.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
 
-<p>En dag kom Simbegwires far hjem senere enn vanlig. “Hvor er du, jenta mi?” ropte han. Simbegwire løp til faren sin. Hun stoppet opp da hun så at han holdt en dame i hånda. “Jeg vil at du skal møte en spesiell kvinne, jenta mi.” Dette er Anita”, sa han og smilte.</p>
+<p>En dag kom Simbegwires far hjem senere enn vanlig. “Hvor er du, jenta mi?” ropte han. Simbegwire løp til faren sin. Hun stoppet opp da hun så at han holdt en dame i hånden. “Jeg vil at du skal møte en spesiell kvinne, jenta mi.” Dette er Anita”, sa han og smilte.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Rukia Nantale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
 
-<p>Etter noen måneder fortalte Simbegwires far dem at han ville komme til å være borte for en stund. “Jeg må reise på grunn av jobben min”, sa han. Men jeg vet at dere vil ta vare på hverandre.” Simbegwire så trist ut, men faren la ikke merke til det. Anita sa ikke noe. Hun var ikke glad hun heller.</p>
+<p>Etter noen måneder fortalte Simbegwires far dem at han ville komme til å være borte for en stund. “Jeg må reise på grunn av jobben min”, sa han. Men jeg vet at dere vil ta vare på hverandre.” Simbegwire så trist ut, men faren la ikke merke til det. Anita sa ikke noe. Hun var ikke glad hun heller.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Rukia Nantale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
 
-<p>En morgen brukte Simbegwire lang tid på å stå opp. “Din latsabb!” ropte Anita. Hun dro Simbegwire ut av senga. Teppet hun var så glad i satt fast på en spiker, og revnet.</p>
+<p>En morgen brukte Simbegwire lang tid på å stå opp. “Din latsabb!” ropte Anita. Hun dro Simbegwire ut av sengen. Teppet hun var så glad i satt fast på en spiker, og revnet.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
 
-<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro av 
+<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro av 
 gårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
 
 <div class="pagenum">8</div>
@@ -120,14 +120,14 @@ gårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
 
-<p>Denne kvinnen så opp i treet. Da hun så jenta og bitene av det fargerike teppet, ropte hun: “Simbegwire, min brors datter!” De andre kvinnene stoppet å vaske og hjalp Simbegwire med å klatre ned fra treet. Tanta hennes ga den lille jenta en klem og prøvde å trøste henne.</p>
+<p>Denne kvinnen så opp i treet. Da hun så jenta og bitene av det fargerike teppet, ropte hun: “Simbegwire, min brors datter!” De andre kvinnene stoppet å vaske og hjalp Simbegwire med å klatre ned fra treet. Tanta hennes ga den lille jenta en klem og prøvde å trøste henne.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
 
-<p>Simbegwires tante tok med seg barnet til sitt eget hus. Hun ga Simbegwire varm mat, og la henne til å sove med teppet til moren hennes. Den natten gråt Simbegwire i det hun sovnet. Men det var fordi hun var så lettet. Hun visste at tanta hennes ville ta seg av henne.</p>
+<p>Simbegwires tante tok med seg barnet til sitt eget hus. Hun ga Simbegwire varm mat, og la henne til å sove med teppet til moren hennes. Den natten gråt Simbegwire i det hun sovnet. Men det var fordi hun var så lettet. Hun visste at tanta hennes ville ta seg av henne.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -141,14 +141,14 @@ gårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
 
-<p>Simbegwire lekte med fetterne og kusinene sine da hun så faren sin på lang avstand. Hun var redd han skulle bli sint, så hun løp inn i huset og gjemte seg. Men faren hennes gikk til henne og sa: “Simbegwire, du har funnet den beste moren i verden. En som er glad i og forstår deg. Jeg er stolt av deg og glad i deg.” De ble enige om at Simbegwire skulle bli boende hos tanta si så lenge hun ville.</p>
+<p>Simbegwire lekte med fetterne og kusinene sine da hun så faren sin på lang avstand. Hun var redd han skulle bli sint, så hun løp inn i huset og gjemte seg. Men faren hennes gikk til henne og sa: “Simbegwire, du har funnet den beste moren i verden. En som er glad i og forstår deg. Jeg er stolt av deg og glad i deg.” De ble enige om at Simbegwire skulle bli boende hos tanta si så lenge hun ville.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
 
-<p>Faren hennes besøkte henne hver dag. Etter hvert kom han med Anita. Hun rakte hånda til Simbegwire. Jeg er veldig lei meg, vesla, jeg tok feil”, gråt hun. “Vil du la meg prøve igjen?” Simbegwire så på faren sin og den bekymrede minen hans. Da gikk hun bort til Anita og la langsomt armene rundt henne.</p>
+<p>Faren hennes besøkte henne hver dag. Etter hvert kom han med Anita. Hun rakte hånden til Simbegwire. Jeg er veldig lei meg, vesla, jeg tok feil”, gråt hun. “Vil du la meg prøve igjen?” Simbegwire så på faren sin og den bekymrede minen hans. Da gikk hun bort til Anita og la langsomt armene rundt henne.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
