--- a/stories/no/0066_nozibele-og-de-tre-hårstråene_slides.html
+++ b/stories/no/0066_nozibele-og-de-tre-hårstråene_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>Så snart hunden var dratt tok Nozibele tre hårstrå fra hodet sitt. Hun la ett hårstrå under senga, ett bak døra, og ett i innhegningen. Så løp hun hjem så fort hun orket.</p>
+<p>Så snart hunden var dratt tok Nozibele tre hårstrå fra hodet sitt. Hun la ett hårstrå under sengen, ett bak døra, og ett i innhegningen. Så løp hun hjem så fort hun orket.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>Da hunden kom tilbake, lette han etter Nozibele. &quot;Nozibele, hvor er du?&quot; ropte han. &quot;Jeg er her, under senga&quot;, sa det første hårstrået. &quot;Jeg er her, bak døra&quot;, sa det andre hårstrået. &quot;Jeg er her, i innhegningen&quot;, sa det tredje hårstrået.</p>
+<p>Da hunden kom tilbake, lette han etter Nozibele. &quot;Nozibele, hvor er du?&quot; ropte han. &quot;Jeg er her, under sengen&quot;, sa det første hårstrået. &quot;Jeg er her, bak døra&quot;, sa det andre hårstrået. &quot;Jeg er her, i innhegningen&quot;, sa det tredje hårstrået.</p>
 <center>
 <strong>12</strong>
 </center>
