--- a/stories/no/0111_hvorfor-flodhester-ikke-har-hår_slides.html
+++ b/stories/no/0111_hvorfor-flodhester-ikke-har-hår_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>Flodhest så seg ikke for så hun var uheldig og tråkket på foten til Kanin. Kanin skrek og begynte og rope til Flodhest: &quot;Hei Flodhest! Kan du ikke se at du tråkker på foten min?&quot;</p>
+<p>Flodhest så seg ikke for så hun var uheldig og tråkket på foten til Kanin. Kanin skrek og begynte og rope til Flodhest: &quot;Hei Flodhest! Kan du ikke se at du tråkker på foten min?&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>Flodhest ba om unnskyldning til Kanin: &quot;Jeg er lei meg, vennen min, jeg så deg ikke. Vær så snill å tilgi meg!&quot; Men Kanin ville ikke høre, og han ropte til Flodhest: &quot;Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!&quot;</p>
+<p>Flodhest ba om unnskyldning til Kanin: &quot;Jeg er lei meg, vennen min, jeg så deg ikke. Vær så snill å tilgi meg!&quot; Men Kanin ville ikke høre, og han ropte til Flodhest: &quot;Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Da dro Kanin for å finne Ild, og han sa: &quot;Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkka på meg!&quot; Ild svarte: &quot;Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.&quot;</p>
+<p>Da dro Kanin for å finne Ild, og han sa: &quot;Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkket på meg!&quot; Ild svarte: &quot;Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>Senere spiste Flodhest gress langt fra elvebredden da det plutselig sa &quot;svisj!&quot; Ild ble til flammer. Flammene begynte å brenne håret til Flodhest.</p>
+<p>Senere spiste Flodhest gress langt fra elvebredden da det plutselig sa &quot;svisj!&quot; Ild ble til flammer. Flammene begynte å brenne håret til Flodhest.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant opp i ilden. Flodhest gråt: &quot;Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
+<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant opp i ilden. Flodhest gråt: &quot;Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
 <center>
 <strong>7</strong>
 </center>
