--- a/stories/no/0134_hvis-jeg-var.html
+++ b/stories/no/0134_hvis-jeg-var.html
@@ -63,7 +63,7 @@ Seruwooza Shafic, Mutaawe Frank, Namuddu Patricia, Mwibonere Bwiza Sara, Namugam
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0134/04.jpg" /></p>
 
-<p>Hvis jeg var en jeger ville jeg jakta på dyr uten hår.</p>
+<p>Hvis jeg var en jeger ville jeg jaktet på dyr uten hår.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Seruwooza Shafic, Mutaawe Frank, Namuddu Patricia, Mwibonere Bwiza Sara, Namugam
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0134/10.jpg" /></p>
 
-<p>Hvis jeg var en lege ville jeg behandla folk med klaps på kinnet.</p>
+<p>Hvis jeg var en lege ville jeg behandlet folk med klaps på kinnet.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
