--- a/stories/no/0134_hvis-jeg-var_slides.html
+++ b/stories/no/0134_hvis-jeg-var_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0134/04.jpg" /></p>
-<p>Hvis jeg var en jeger ville jeg jakta på dyr uten hår.</p>
+<p>Hvis jeg var en jeger ville jeg jaktet på dyr uten hår.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0134/10.jpg" /></p>
-<p>Hvis jeg var en lege ville jeg behandla folk med klaps på kinnet.</p>
+<p>Hvis jeg var en lege ville jeg behandlet folk med klaps på kinnet.</p>
 <center>
 <strong>9</strong>
 </center>
