--- a/stories/no/0327_å-telle-dyr_slides.html
+++ b/stories/no/0327_å-telle-dyr_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
-<p>To sjiraffer går for å drikke vann.</p>
+<p>To sjiraffer går for å drikke vann.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
-<p>Tre bøfler og fire fugler går også for a drikke vann.</p>
+<p>Tre bøfler og fire fugler går også for å drikke vann.</p>
 <center>
 <strong>3</strong>
 </center>
