--- a/stories/no/0337_voksbarna.html
+++ b/stories/no/0337_voksbarna.html
@@ -56,7 +56,7 @@ Southern African Folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
 
-<p>De krangla aldri. Barna hjalp foreldrene sine hjemme og i åkeren.</p>
+<p>De kranglet aldri. Barna hjalp foreldrene sine hjemme og i åkeren.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
