--- a/stories/no/0337_voksbarna_slides.html
+++ b/stories/no/0337_voksbarna_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>De krangla aldri. Barna hjalp foreldrene sine hjemme og i åkeren.</p>
+<p>De kranglet aldri. Barna hjalp foreldrene sine hjemme og i åkeren.</p>
 <center>
 <strong>2</strong>
 </center>
