--- a/stories/de/0296_tom-der-bananenverkäufer_slides.html
+++ b/stories/de/0296_tom-der-bananenverkäufer_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Fotballhelten Andiswa  - Global African Storybook</title>
+  <title>Tom der Bananenverkäufer - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="fotballhelten-andiswa" class="slide level1">
-<h1>Fotballhelten Andiswa</h1>
+<section id="tom-der-bananenverkäufer" class="slide level1">
+<h1>Tom der Bananenverkäufer</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p>Andiswa så på guttene spille fotball. Hun ville så gjerne være med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
+<p>Tom trägt einen Korb mit reifen Bananen.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
-<p>Treneren satte hendene i siden. &quot;På skolen her får bare gutter spille fotball&quot;, sa han.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
+<p>Tom geht zum Markt, um Bananen zu verkaufen.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>Guttene sa at hun skulle gå og spille nettball. De sa at nettball er for jenter og fotball er for gutter. Andiswa ble sinna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
+<p>Die Leute auf dem Markt kaufen Obst.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>Dagen etter var det en stor fotballkamp på skolen. Treneren var bekymret fordi den beste spilleren på laget var syk og kunne ikke spille.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
+<p>Aber niemand kauft Toms Bananen. Sie kaufen lieber Obst von Frauen.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
-<p>Andiswa løp bort til treneren og tryglet om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha Andiswa med på laget.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
+<p>&quot;In unserer Gemeinschaft verkaufen nur Frauen Obst.&quot;, sagen die Leute. &quot;Was ist denn das für ein Mann?&quot;, fragen die Leute.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p>Det ble en hard kamp. Ingen hadde skåret mål etter første omgang.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
+<p>Aber Tom gibt nicht auf. Er ruft: &quot;Kauft meine Bananen! Kauft meine süßen, reifen Bananen!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p>I andre omgang sentret en gutt ballen til Andiswa. Hun løp mot målet, klinte til ballen og skåret.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
+<p>Eine Frau nimmt ein Bündel Bananen aus dem Korb. Sie schaut sich die Bananen genau an.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
-<p>Publikum var fra seg av glede. Siden den dagen fikk jenter også spille fotball på skolen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
+<p>Die Frau kauft die Bananen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,54 @@
 </section>
 <section class="slide level1">
 
-<h2 id="fotballhelten-andiswa-1">Fotballhelten Andiswa</h2>
-<strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
+<p>Mehr Leute kommen an den Stand. Sie kaufen Toms Bananen und essen sie.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
+<p>Bald ist der Korb leer. Tom zählt das Geld, was er verdient hat.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
+<p>Dann kauft Tom Seife, Zucker und Brot. Er legt die Sachen in seinen Korb.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
+<p>Tom balanciert den Korb auf seinem Kopf und geht nach Hause.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="tom-der-bananenverkäufer-1">Tom der Bananenverkäufer</h2>
+<strong>Text:</strong> Humphreys Odunga<br> <strong>Veranschaulichung:</strong> Zablon Alex Nguku<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/andiswa-soccer-star'>her</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tom-banana-seller'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
