--- a/stories/no/0001_en-veldig-høy-mann_slides.html
+++ b/stories/no/0001_en-veldig-høy-mann_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>Senga hans var for kort.</p>
+<p>Sengen hans var for kort.</p>
 <center>
 <strong>3</strong>
 </center>
