--- a/stories/no/0003_skoleklær.html
+++ b/stories/no/0003_skoleklær.html
@@ -63,7 +63,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
 
-<p>Denne vesken er stor.</p>
+<p>Denne veska er stor.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
