--- a/stories/no/0006_anansi-og-visdommen.html
+++ b/stories/no/0006_anansi-og-visdommen.html
@@ -77,7 +77,7 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
 
-<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: “Det var jo jeg som skulle ha all denne visdommen, men nå var sønnen min lurere enn meg!” Anansi ble så sinna at han kastet krukka ned fra treet.</p>
+<p>Snart var han oppe i toppen av treet. Men så var det han tenkte: “Det var jo jeg som skulle ha all denne visdommen, men nå var sønnen min lurere enn meg!” Anansi ble så sint at han kastet krukka ned fra treet.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
