--- a/stories/no/0110_et-lite-frø-historien-om-wangari-maathai.html
+++ b/stories/no/0110_et-lite-frø-historien-om-wangari-maathai.html
@@ -63,7 +63,7 @@ Nicola Rijsdijk<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
 
-<p>Hun syntes den beste tida på dagen var rett etter solnedgang. Når det ble for mørkt til å se plantene visste hun at det var på tide å gå hjem. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
+<p>Hun syntes den beste tiden på dagen var rett etter solnedgang. Når det ble for mørkt til å se plantene visste hun at det var på tide å gå hjem. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
