--- a/stories/no/0110_et-lite-frø-historien-om-wangari-maathai_slides.html
+++ b/stories/no/0110_et-lite-frø-historien-om-wangari-maathai_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
-<p>Hun syntes den beste tida på dagen var rett etter solnedgang. Når det ble for mørkt til å se plantene visste hun at det var på tide å gå hjem. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
+<p>Hun syntes den beste tiden på dagen var rett etter solnedgang. Når det ble for mørkt til å se plantene visste hun at det var på tide å gå hjem. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
 <center>
 <strong>3</strong>
 </center>
