--- a/stories/no/0327_å-telle-dyr.html
+++ b/stories/no/0327_å-telle-dyr.html
@@ -56,14 +56,14 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>norsk</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
 
-<p>To sjiraffer går for å drikke vann.</p>
+<p>To sjiraffer går for å drikke vann.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
 
-<p>Tre bøfler og fire fugler går også for a drikke vann.</p>
+<p>Tre bøfler og fire fugler går også for å drikke vann.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
